--- a/Video.css
+++ b/Video.css
@@ -3,27 +3,42 @@ body{
 background: radial-gradient(circle,rgba(167, 131, 222, 1) 0%, rgba(123, 90, 176, 1) 35%, rgba(85, 34, 143, 1) 100%);
 }
 
-
-
-
-
-
-
-audio{
-    display: block; /* Cambia el display a bloque para mejor control de diseño */
-      width: 35%;     /* Ejemplo: hazlo más estrecho */
-      margin: 20px auto; /* Ejemplo: céntralo horizontalmente */
-      /* border: 1px solid #734545; /* Ejemplo: añade un borde */
-      /*border-radius: 5px;   /* Ejemplo: esquinas redondeadas */
-      padding: 10px;
+h1{
+    color:#a272c9;
+    text-align: center;
+    font-size: 350%;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 
-.esconder audio{
+.Pumpe{
+  display: flex;
+    justify-content: center;
+}
+
+.shock{
+
 display: flex;
-  flex-direction: column;
-  min-height: 70vh;
+    justify-content: center;
+     padding-right: 2%;
+     padding-left: 2%;
+     padding-top: 4%;
+
+     /* Invisible texto */
+figcaption {
+    em{
+        color: #1503a0;
+    }
+      color: #d8abee;
+    text-align: center;
+     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  display:none; 
+  transition: all .7s;
 }
 
-.audio{
-margin-top: auto;
+/* Visible texto */
+figure:hover > figcaption {
+  display:block;
+  transition: all .7s;
+}
+
 }
